skdep/force-app/main/default/objects/Price_List__c/fields/Combination_Key__c.field-meta.xml
<CustomField>
    <fullName>Combination_Key__c</fullName>
    <externalId>true</externalId>
    <label>Combination Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>