skdep/force-app/main/default/objects/Price_List__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price List</relationshipLabel>
    <relationshipName>Price_List</relationshipName>
    <type>Lookup</type>
</CustomField>