skdep/force-app/main/default/objects/Price_List__c/fields/Discount_Price__c.field-meta.xml
<CustomField>
    <fullName>Discount_Price__c</fullName>
    <label>Discount Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>