skdep/force-app/main/default/objects/Price_List__c/fields/Latest_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Update_Status__c</fullName>
    <label>Latest Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>