skdep/force-app/main/default/objects/Price_List__c/fields/OnDemand__c.field-meta.xml
<CustomField>
    <fullName>OnDemand__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OnDemand</label>
    <type>Checkbox</type>
</CustomField>