skdep/force-app/main/default/objects/Price_List__c/listViews/NewPriceList.listView-meta.xml
<ListView>
    <fullName>NewPriceList</fullName>
    <columns>NAME</columns>
    <columns>Combination_Key__c</columns>
    <columns>Customer__c</columns>
    <columns>Customer_Group__c</columns>
    <columns>Latest_Update_Status__c</columns>
    <columns>Product__c</columns>
    <columns>Price__c</columns>
    <columns>Discount_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>NewPriceList</label>
    <language>en_US</language>
</ListView>